[Fix]: Overflow

--- a/Garage/Applications/GitHub Profiles/scss/_fav.scss
+++ b/Garage/Applications/GitHub Profiles/scss/_fav.scss
@@ -2,6 +2,10 @@
     .fav{
         @include flex-col;
 
+        overflow-y: scroll;
+
+        height: 90%;
+
         .image{
             width: 5rem;
             height: 5rem;
@@ -33,7 +37,7 @@
 
             .view{
                 @include content-center;
-                
+
                 button{
                     color: white;
                     font-size: 1.5rem;
